# izpr

./: .gitignore  Cargo.toml  README.md  README.md.bak
data/: gendata.py  plot.gnuplot  run.sh
data/output/: fig_cq.eps
data/run_dumps/: all.dump  dis_fft.dump
dependency/zkregex/acc/: .gitignore  Cargo.toml
dependency/zkregex/acc/dependency/algebra/: .gitignore  Cargo.toml  compile.sh
dependency/zkregex/acc/dependency/algebra/ec/: Cargo.toml
dependency/zkregex/acc/dependency/algebra/ec/src/models/: short_weierstrass_jacobian.rs
dependency/zkregex/acc/dependency/algebra/ff/: LICENSE-MIT
dependency/zkregex/acc/dependency/algebra/ff/src/: lib.rs
dependency/zkregex/acc/dependency/algebra/ff/src/fields/models/fp/: montgomery_backend.rs
dependency/zkregex/acc/dependency/algebra/poly/: Cargo.toml
dependency/zkregex/acc/dependency/algebra/poly/src/polynomial/univariate/: dense.rs
dependency/zkregex/acc/dependency/curves/bls12_381/: Cargo.toml
dependency/zkregex/acc/dependency/curves/bn254/: Cargo.toml
dependency/zkregex/acc/dependency/curves/mnt4_298/: LICENSE-APACHE
dependency/zkregex/acc/scripts/: PROCESS_ALL.py  aggregate.sh  check.sh  compile.sh  debug.py  debug.sh  host1  hosts2  perf.py  pingpong.sh  profile.sh  prover.sh  publisher.sh  run.sh  setup_ramfs.sh  single_profile.sh  test.sh  test_nonzk_sigma_proof.sh  unset_ramfs.sh  zk_prove.sh
dependency/zkregex/acc/src/: lib.rs  main.rs
dependency/zkregex/acc/src/poly/: common.rs  dis_key.rs  dis_poly.rs  dis_vec.rs  disfft.rs  group_dis_vec.rs  mod.rs  serial.rs
dependency/zkregex/acc/src/profiler/: config.rs  mod.rs  profile_fft.rs  profile_groth16.rs  profile_group.rs  profile_pairing.rs  profile_poly.rs  profile_proto.rs  profile_r1cs.rs
dependency/zkregex/acc/src/tools/: mod.rs
scripts/: compile.sh  debug.sh  paperdata.py  profile.py  test.sh
src/: lib.rs  main.rs
src/izpr/: mod.rs  serial_asset1.rs  serial_asset1_v2.rs  serial_cq.rs  serial_group_fft2.rs  serial_logical_poly_utils.rs  serial_pn_lookup.rs  serial_poly_utils.rs  serial_profiler.rs  serial_rng.rs  topmat.rs
